--- a/pre-tutorials/DIPtutorial-image-processing.ipynb
+++ b/pre-tutorials/DIPtutorial-image-processing.ipynb
@@ -86,9 +86,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "img = io.imread('mandril.png')\n",
@@ -119,9 +117,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "fig, ax = plt.subplots() # create figure\n",
@@ -138,9 +134,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "fig, ax = plt.subplots()\n",
@@ -158,9 +152,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "fig, ax = plt.subplots()\n",
@@ -179,9 +171,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "fig, ax = plt.subplots(figsize=(10,6)) # create figure with custom size\n",
@@ -194,15 +184,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Subplots are often requested while making the assignments. Let's plot the different colour channels of the RGB image (sliced array), in the same figure:"
+    "Subplots are often requested while making the assignments. Let's plot the different color channels of the RGB image (sliced array), in the same figure:"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "fig, ax = plt.subplots(nrows=1, ncols=3) # create figure with 1x3 subplots\n",
@@ -222,15 +210,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The default colormap lookup table (LUT) is `viridis`, thus the intensities of the single channels are shown in pseudocolor. The colormap of each subplot can be switched into grayscale: "
+    "The default colormap lookup table (LUT) is `viridis`, thus the intensities of the single channels are shown in pseudocolor. The colormap for each subplot can be separately switched into grayscale: "
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "fig, ax = plt.subplots(1, 3)\n",
@@ -256,9 +242,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "plt.rcParams['image.cmap'] = 'gray' # set default colormap to gray\n",
@@ -284,14 +268,14 @@
     "\n",
     "Different image __[data types](http://scikit-image.org/docs/dev/user_guide/data_types.html)__ (`dtype`) are assumed to use the following ranges:\n",
     "* `uint8` -> [0, 255]\n",
-    "* `uint16` ->[0, 65535]\n",
+    "* `uint16` -> [0, 65535]\n",
     "* `uint32` -> [0, 232]\n",
     "* `float` -> [-1, 1] or [0, 1]\n",
     "* `int8` -> [-128, 127]\n",
     "* `int16` -> [-32768, 32767]\n",
     "* `int32` -> [-231, 231 - 1]\n",
     "\n",
-    "Therefore, image intensities should be always __[scaled](http://scikit-image.org/docs/dev/user_guide/data_types.html#rescaling-intensity-values)__ according to the data type in order to avoid distortion.\n",
+    "Therefore, image intensities should be always __[scaled](http://scikit-image.org/docs/dev/user_guide/data_types.html#rescaling-intensity-values)__ according to the data type in order to avoid unwanted distortion.\n",
     "\n",
     "Many image processing functions e.g. in `skimage` are usually designed so that they accept any of the aforementioned data types but the returned image may be of different data type due to efficiency reasons. In `skimage`, there are utility functions for converting data types and rescaling the image intensities accordingly:\n",
     "* `img_as_float` -> 64-bit floating point\n",
@@ -305,9 +289,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "from skimage import img_as_float\n",
@@ -323,7 +305,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Data types can be a source of \"unexpected errors\" when performing arithmetic operations, like addition and subtraction on images. Therefore, it is crucial to understand the different data types and the corresponding value ranges when one should have no problem recognising them.\n",
+    "Data types can be a source of \"unexpected errors\" when performing arithmetic operations, like addition and subtraction on images. Therefore, it is crucial to understand the different data types and the corresponding value ranges when potential errors can be easily recognized.\n",
     "\n",
     "NumPy uses modulo arithmetic on **overflow values** instead of clipping them."
    ]
@@ -331,13 +313,12 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "img = np.random.randint(0,255,[10,10], dtype='uint8') # 10x10 uint8 image with random values\n",
     "\n",
+    "print 'img (uint8):'\n",
     "# show original\n",
     "data_plot = plt.imshow(img, vmin=0, vmax=255, interpolation='None')\n",
     "plt.show()\n",
@@ -345,6 +326,7 @@
     "# add 100 to each pixel value \n",
     "img100 = img + 100\n",
     "\n",
+    "print 'img + 100:'\n",
     "# show the resulting image\n",
     "data_plot = plt.imshow(img100, vmin=0, vmax=255, interpolation='None')\n",
     "plt.show()\n",
@@ -352,14 +334,14 @@
     "print 'data type after addition:', img100.dtype\n",
     "print '\\n'\n",
     "\n",
-    "print 'Original image:'\n",
+    "print 'img (uint8):'\n",
     "print img\n",
     "print '\\n'\n",
-    "print 'Note that result image values are calculated modulo 256, i.e. (img + 100) % 256:'\n",
+    "print 'img + 100 is actually computed modulo 256, i.e. (img + 100) % 256:'\n",
     "print img100\n",
     "print '\\n'\n",
     "\n",
-    "print 'img / 3 ... and floats get truncated toward zero:'\n",
+    "print 'img / 3 ... floats get truncated towards zero:'\n",
     "print img / 3"
    ]
   },
@@ -373,13 +355,12 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "img = np.random.randint(0,255,[10,10], dtype='uint16') # use higher precision, i.e. uint16\n",
     "\n",
+    "print 'img (uint16):'\n",
     "# show original\n",
     "data_plot = plt.imshow(img, vmin=0, vmax=255, interpolation='None')\n",
     "plt.show()\n",
@@ -390,20 +371,21 @@
     "# clip (saturate) resulting image and convert to uint8\n",
     "img100uint8 = np.clip(img100, 0, 255).astype(np.uint8)\n",
     "\n",
-    "# add 100 to each pixel value and show resulting image\n",
+    "print 'img + 100 with saturated overflow values (uint8)'\n",
+    "# show resulting image\n",
     "data_plot = plt.imshow(img100uint8, interpolation='None')\n",
     "plt.show()\n",
     "\n",
     "print 'data type after addition:', img100.dtype\n",
     "print '\\n'\n",
     "\n",
-    "print 'Original image:'\n",
+    "print 'img (uint16):'\n",
     "print img\n",
     "print '\\n'\n",
-    "print 'Note the values exceeding 255 in the resulting int16 image:'\n",
+    "print 'Note the values exceeding 255 in the resulting uint16 image (img + 100):'\n",
     "print img100\n",
     "print '\\n'\n",
-    "print 'Clipped int16 image converted into uint8 (values over range saturated into 255):'\n",
+    "print 'Clipped uint16 image converted into uint8 (values over range saturated into 255):'\n",
     "print img100uint8\n",
     "print '\\n'"
    ]
@@ -413,6 +395,157 @@
    "metadata": {},
    "source": [
     "Note that similar \"issues\" occur with negative values when subtracting images."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Unexpected errors with visualizing images with `imshow`\n",
+    "\n",
+    "The operation of matplotlib's `imshow` function is rather complicated as its default interpretation of different image types varies.\n",
+    "\n",
+    "In the case of `NxM` arrays of any data type, the visualized images are automatically scaled so that the full range of colors in the colormap is utilized:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "scrolled": false
+   },
+   "outputs": [],
+   "source": [
+    "print 'single channel uint16 array:\\n'\n",
+    "\n",
+    "img = np.random.randint(0,255,[5,5], dtype='uint16') # 5x5 uint16 image with random values\n",
+    "\n",
+    "print 'img (uint16):'\n",
+    "# show original\n",
+    "data_plot = plt.imshow(img, interpolation='None')\n",
+    "plt.show()\n",
+    "\n",
+    "print 'img + 100 (uint16):'\n",
+    "# add 100 to each pixel value and show resulting image\n",
+    "data_plot = plt.imshow(img + 100, interpolation='None')\n",
+    "plt.show()\n",
+    "\n",
+    "print 'Note that the images look exactly the same despite constant bias in their value ranges:'\n",
+    "print '\\n'\n",
+    "\n",
+    "print 'img (uint16):'\n",
+    "print img\n",
+    "print '\\n'\n",
+    "print 'img + 100 (uint16):'\n",
+    "print img + 100\n",
+    "print '\\n'\n",
+    "\n",
+    "print 'single channel float64 array:'\n",
+    "\n",
+    "img = np.random.random([5,5]) # 5x5 float64 image with random values\n",
+    "\n",
+    "print 'img (float64):'\n",
+    "# show original\n",
+    "data_plot = plt.imshow(img, interpolation='None')\n",
+    "plt.show()\n",
+    "\n",
+    "print 'img + 1 (float64):'\n",
+    "# add 1 to each pixel value and show resulting image\n",
+    "data_plot = plt.imshow(img + 1, interpolation='None')\n",
+    "plt.show()\n",
+    "\n",
+    "print 'Again, the images look exactly the same despite the bias:'\n",
+    "print '\\n'\n",
+    "\n",
+    "print 'img (float64):'\n",
+    "print img\n",
+    "print '\\n'\n",
+    "print 'img + 1 (float64):'\n",
+    "print img + 1\n",
+    "print '\\n'"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Please note that the overflow \"issue\" and modulo arithmetic still exist if value range of the data type is exceeded:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "img = np.random.randint(0,255,[10,10], dtype='uint16') # 10x10 uint16 image with random values\n",
+    "\n",
+    "print 'img (uint16):'\n",
+    "# show original\n",
+    "data_plot = plt.imshow(img, interpolation='None')\n",
+    "plt.show()\n",
+    "\n",
+    "# subtract 100 from each pixel value and show resulting image\n",
+    "print 'img - 100 (uint16):'\n",
+    "data_plot = plt.imshow(img - 100, interpolation='None')\n",
+    "plt.show()\n",
+    "\n",
+    "print 'Note the result of modulo arithmetic:'\n",
+    "print '\\n'\n",
+    "\n",
+    "print 'img (uint16):'\n",
+    "print img\n",
+    "print '\\n'\n",
+    "print 'img - 100 (uint16):'\n",
+    "print img - 100\n",
+    "print '\\n'"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "`NxMx3` arrays, like RGB images, are not automatically scaled for visualization as the individual channels are assumed to be in the range of:\n",
+    "* `[0, 1]` for `float64` arrays\n",
+    "* `[0, 255]` for `uint8` arrays"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "scrolled": false
+   },
+   "outputs": [],
+   "source": [
+    "from skimage import img_as_ubyte\n",
+    "\n",
+    "img = io.imread('mandril.png') # read uint8 RGB image\n",
+    "\n",
+    "print 'Original uint8 RGB image:'\n",
+    "# show original\n",
+    "data_plot = plt.imshow(img, interpolation='None')\n",
+    "plt.show()\n",
+    "\n",
+    "print 'Converted to float64 without rescaling to [0,1]:'\n",
+    "# convert to float64 using astype\n",
+    "data_plot = plt.imshow(img.astype(np.float), interpolation='None')\n",
+    "plt.show()\n",
+    "\n",
+    "print 'Converted to float64 with rescaling to [0,1]:'\n",
+    "# convert to float64 using img_as_float\n",
+    "data_plot = plt.imshow(img_as_float(img), interpolation='None')\n",
+    "plt.show()\n",
+    "\n",
+    "print 'Converted from float64 back to uint8 without rescaling to [0,255]:'\n",
+    "# convert to float64 using img_as_float\n",
+    "data_plot = plt.imshow(img_as_float(img).astype(np.uint8), interpolation='None')\n",
+    "plt.show()\n",
+    "\n",
+    "print 'Converted from float64 back to uint8 with rescaling to [0,255]:'\n",
+    "# convert to float64 using img_as_float\n",
+    "data_plot = plt.imshow(img_as_ubyte(img_as_float(img)), interpolation='None')\n",
+    "plt.show()"
    ]
   },
   {
