--- a/DIP_PA2/DIP_PA2.ipynb
+++ b/DIP_PA2/DIP_PA2.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
@@ -74,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
     "collapsed": true
    },
@@ -102,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {
     "collapsed": true
    },
@@ -115,7 +115,7 @@
     "f1, f2 = np.meshgrid(f1, f2)\n",
     "\n",
     "# make a matrix 'D' with absolute frequency values (“sampled” frequency domain)\n",
-    "# where zero-frequency is at D[250,250]\n",
+    "# where zero-frequency is at D[250,250] and the other values correspond to the absolute distance from it\n",
     "D = np.sqrt(f1**2 + f2**2)\n",
     "\n",
     "# set cut-off frequency 'D0' to 0.2\n",
@@ -138,7 +138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {
     "collapsed": true
    },
@@ -162,7 +162,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {
     "collapsed": true
    },
@@ -181,12 +181,12 @@
    "source": [
     "**3.5. Reconstruct the filtered images with __[`fftpack.ifft2()`](https://docs.scipy.org/doc/scipy/reference/generated/scipy.fftpack.ifft2.html#scipy.fftpack.ifft2)__ and __[`fftpack.ifftshift()`](https://docs.scipy.org/doc/scipy/reference/generated/scipy.fftpack.ifftshift.html#scipy.fftpack.ifftshift)__ in reverse order. Then, display the original image and the two filtered images using `imshow()` in the same figure.** \n",
     "\n",
-    "Hint: Due to possible round-off errors, you have to take the real part of the resulting inverse FT before displaying it with `imshow()`. Please note also that the resulting images contain values beyond the original `uint8` image `[0,255]`, so you need to saturate these values using __[`np.clip()`](https://docs.scipy.org/doc/numpy/reference/generated/numpy.clip.html#numpy.clip)__ before visualization (you can test what the reconstructed images look like without clipping)."
+    "Hint: Due to possible round-off errors, you have to __[take the real part](https://docs.scipy.org/doc/numpy-dev/reference/generated/numpy.real.html#numpy.real)__ of the resulting inverse FT before displaying it with `imshow()`. Please note also that the resulting images contain values beyond the original `uint8` image `[0,255]`, so you need to saturate these values using __[`np.clip()`](https://docs.scipy.org/doc/numpy/reference/generated/numpy.clip.html#numpy.clip)__ before visualization (you can test what the reconstructed images look like without clipping)."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {
     "collapsed": true
    },
@@ -198,7 +198,7 @@
     "# take the 'real' part of the resulting images due to possible round-off errors\n",
     "\n",
     "\n",
-    "# clip values beyond the uint8 range [0,255] \n",
+    "# clip (saturate) values beyond the uint8 range [0,255] \n",
     "\n",
     "\n",
     "# display the original image and its lowpass and highpass filtered images in the same figure\n"
@@ -224,7 +224,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {
     "collapsed": true
    },
@@ -245,7 +245,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {
     "collapsed": true
    },
@@ -266,7 +266,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {
     "collapsed": true
    },
