--- a/pre-tutorials/DIPtutorial-arrays-and-numpy.ipynb
+++ b/pre-tutorials/DIPtutorial-arrays-and-numpy.ipynb
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
@@ -81,11 +81,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "a =  [1 2 3 4 5 6 7 8 9]\n",
+      "a has 1 dimension(s) and is a variable of class <type 'numpy.ndarray'> and data type int64 \n",
+      "\n",
+      "b = \n",
+      "[[ 5]\n",
+      " [ 6]\n",
+      " [ 3]\n",
+      " [-1]\n",
+      " [ 6]\n",
+      " [ 9]\n",
+      " [ 2]\n",
+      " [ 5]\n",
+      " [ 5]]\n",
+      "b has 2 dimension(s) and is a variable of class <type 'numpy.ndarray'> and data type int64 \n",
+      "\n",
+      "A = \n",
+      "[[ 1  2  3  4 -1 -2 -3 -4]\n",
+      " [ 5  6  7  8 -5 -6 -7 -8]]\n",
+      "A has 2 dimension(s) and is a variable of class <type 'numpy.ndarray'> and data type int64 \n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "# defining arrays\n",
     "a = np.array([1, 2, 3, 4, 5, 6, 7, 8, 9]) # a row vector, also called a 1x9 array\n",
@@ -110,11 +135,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(2, 8)\n",
+      "rows = 2\n",
+      "columns = 8\n"
+     ]
+    }
+   ],
    "source": [
     "print A.shape # shape of A is 2x8\n",
     "rA, cA = A.shape\n",
@@ -135,11 +168,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "c1 =  [1 2 3 4 5 6 7 8 9]\n",
+      "c2 =  [1 3 5 7 9]\n",
+      "c3 =  [10  8  6  4  2]\n",
+      "c4 =  [ 0.   0.3  0.6  0.9  1.2  1.5  1.8]\n",
+      "c5 =  [ 0.    0.25  0.5   0.75  1.    1.25  1.5   1.75  2.  ]\n"
+     ]
+    }
+   ],
    "source": [
     "# Equally spaced arrays and sequences of numbers\n",
     "c1 = np.arange(1,10,1) # from 1 to 9, increasing with a step of 1\n",
@@ -171,11 +214,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "d1 =  [[ 0.  0.  0.  0.]\n",
+      " [ 0.  0.  0.  0.]\n",
+      " [ 0.  0.  0.  0.]] \n",
+      "\n",
+      "d2 =  [[[ 1.  1.  1.  1.]\n",
+      "  [ 1.  1.  1.  1.]\n",
+      "  [ 1.  1.  1.  1.]]\n",
+      "\n",
+      " [[ 1.  1.  1.  1.]\n",
+      "  [ 1.  1.  1.  1.]\n",
+      "  [ 1.  1.  1.  1.]]] \n",
+      "\n",
+      "d3 =  [[ 0.3  0.6  0.9]\n",
+      " [ 1.2  1.5  1.8]] \n",
+      "\n",
+      "d4 =  [[ inf  inf  inf]\n",
+      " [ inf  inf  inf]\n",
+      " [ inf  inf  inf]] \n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "# Arrays with zeros, ones, random and sime fixed value entries - here you need to specify the sizes of the dimensions (also known as axis in Python)\n",
     "d1 = np.zeros((3,4))  # 3 rows, 4 columns\n",
@@ -198,12 +265,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {
-    "collapsed": true,
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "c1 =  [[ 0.  0.  0.  0.]\n",
+      " [ 0.  0.  0.  0.]\n",
+      " [ 0.  0.  0.  0.]] \n",
+      "\n",
+      "c2 =  [[[ 1.  1.  1.  1.]\n",
+      "  [ 1.  1.  1.  1.]\n",
+      "  [ 1.  1.  1.  1.]]\n",
+      "\n",
+      " [[ 1.  1.  1.  1.]\n",
+      "  [ 1.  1.  1.  1.]\n",
+      "  [ 1.  1.  1.  1.]]] \n",
+      "\n",
+      "c3 =  [[ 0.  0.  0.]\n",
+      " [ 0.  0.  0.]] \n",
+      "\n",
+      "c4 =  [[ inf  inf  inf]\n",
+      " [ inf  inf  inf]\n",
+      " [ inf  inf  inf]] \n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "c1 = np.zeros_like((d1))  # shape and type copied from d1\n",
     "c2 = np.ones_like(d2) # shape and type copied from d2\n",
@@ -234,11 +326,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "a = \n",
+      "[[1 2 3]\n",
+      " [4 5 6]]\n",
+      "b = \n",
+      "[[ 3 19 20]\n",
+      " [ 9 16 14]]\n",
+      "c = \n",
+      "[[ 7  8]\n",
+      " [ 9 10]\n",
+      " [11 12]]\n",
+      "d = \n",
+      "[ 1.  2.  3.  4.  5.  6.  7.  8.  9.] \n",
+      "\n",
+      "element-element multiplication a*b (see figure): \n",
+      "[[ 3 38 60]\n",
+      " [36 80 84]] \n",
+      "\n",
+      "matrix multiplication a*c (see figure): \n",
+      "[[ 58  64]\n",
+      " [139 154]] \n",
+      "\n",
+      "raise each element of d to the power of 2: \n",
+      "[  1.   4.   9.  16.  25.  36.  49.  64.  81.] \n",
+      "\n",
+      "divide each element of d by 2: \n",
+      "[ 0.5  1.   1.5  2.   2.5  3.   3.5  4.   4.5] \n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "a = np.array([[1, 2, 3], [4, 5, 6]])\n",
     "b = np.array([[3, 19, 20], [9, 16, 14]])\n",
@@ -275,11 +399,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[ 0  1  2  3  4  5  6  7  8  9 10 11 12 13 14 15 16 17 18 19] \n",
+      "\n",
+      "[[ 0  1  2  3  4]\n",
+      " [ 5  6  7  8  9]\n",
+      " [10 11 12 13 14]\n",
+      " [15 16 17 18 19]] \n",
+      "\n",
+      "[ 0  1  2  3  4  5  6  7  8  9 10 11 12 13 14 15 16 17 18 19]\n"
+     ]
+    }
+   ],
    "source": [
     "b = np.arange(20)\n",
     "print b, '\\n'\n",
@@ -299,12 +436,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {
-    "collapsed": true,
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ 0  1  2  3  4]\n",
+      " [ 5  6  7  8  9]\n",
+      " [10 11 12 13 14]\n",
+      " [15 16 17 18 19]]\n"
+     ]
+    }
+   ],
    "source": [
     "b = np.arange(20).reshape(4,5)\n",
     "print b"
@@ -319,12 +466,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {
-    "collapsed": true,
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[50]\n",
+      " [25]\n",
+      " [50]] \n",
+      "\n",
+      "[[50 50 50]\n",
+      " [25 25 25]\n",
+      " [50 50 50]] \n",
+      "\n",
+      "[[50 25 50]\n",
+      " [50 25 50]\n",
+      " [50 25 50]]\n"
+     ]
+    }
+   ],
    "source": [
     "c = np.random.randint(0,high=100,size=(3,1))\n",
     "print c,'\\n'\n",
@@ -345,12 +509,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {
-    "collapsed": true,
     "scrolled": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[37 57 34  8 62]\n",
+      " [46 34 89 83 84]\n",
+      " [72 45 53  2 31]\n",
+      " [ 7 46 29  6 41]\n",
+      " [54 73 69  9 39]] \n",
+      "\n",
+      "[[46 34 89 83 84]\n",
+      " [72 45 53  2 31]\n",
+      " [ 7 46 29  6 41]\n",
+      " [54 73 69  9 39]] \n",
+      "\n",
+      "[[46 34 89 83]\n",
+      " [72 45 53  2]\n",
+      " [ 7 46 29  6]\n",
+      " [54 73 69  9]]\n"
+     ]
+    }
+   ],
    "source": [
     "D = np.random.randint(0, high=100, size=(5,5)) # create 10×10 random integer array D\n",
     "print D,'\\n'\n",
@@ -371,11 +556,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "n = [-2. -1.  0.  1.  2.] \n",
+      "\n",
+      "Gaussian window w = [ 0.13533528  0.60653066  1.          0.60653066  0.13533528]\n"
+     ]
+    }
+   ],
    "source": [
     "M = 5 # window size\n",
     "std = 1 # standard deviation (sigma)\n",
@@ -397,11 +590,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "maximum value in array D = 89\n",
+      "minimum value in array D = 2\n",
+      "mean value in array D = 44.8125\n",
+      "standard deviation in array D = 27.5027697469\n"
+     ]
+    }
+   ],
    "source": [
     "print 'maximum value in array D =', np.max(D)\n",
     "print 'minimum value in array D =', np.min(D)\n",
@@ -418,11 +620,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "D = \n",
+      "[[46 34 89 83]\n",
+      " [72 45 53  2]\n",
+      " [ 7 46 29  6]\n",
+      " [54 73 69  9]] \n",
+      "\n",
+      "D flattened = \n",
+      "[46 34 89 83 72 45 53  2  7 46 29  6 54 73 69  9] \n",
+      "\n",
+      "maximum value in array D = 89\n",
+      "maximum value in each column of D = [72 73 89 83]\n",
+      "maximum value in each row of D = [89 72 46 73]\n"
+     ]
+    }
+   ],
    "source": [
     "print 'D = \\n', D, '\\n'\n",
     "print 'D flattened = \\n', D.flatten(), '\\n' # A flattened\n",
@@ -458,11 +677,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "e =  [  0   1   8  27  64 125 216 343 512 729] \n",
+      "\n",
+      "Third entry in e: 8 \n",
+      "\n",
+      "Entries 2 to 5 in e: [ 8 27 64] \n",
+      "\n",
+      "Every second entry from 2 to 8 in e: [  1  27 125 343] \n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "e = np.arange(10)**3  # define new array\n",
     "print 'e = ', e, '\\n'\n",
@@ -480,11 +712,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "b = \n",
+      "[[ 0  1  2  3  4]\n",
+      " [ 5  6  7  8  9]\n",
+      " [10 11 12 13 14]\n",
+      " [15 16 17 18 19]] \n",
+      "\n",
+      "Entry in row 3, column 2 in b: 11 \n",
+      "\n",
+      "\"Middle-bottom\" minor array of b: \n",
+      "[[11 12 13]\n",
+      " [16 17 18]] \n",
+      "\n",
+      "Second column of b: \n",
+      "[ 1  6 11 16] \n",
+      "\n",
+      "Third row of b: \n",
+      "[10 11 12 13 14] \n",
+      "\n",
+      "First two rows and columns of b: \n",
+      "[[0 1]\n",
+      " [5 6]] \n",
+      "\n",
+      "Last two rows and columns of b:\n",
+      "[[13 14]\n",
+      " [18 19]] \n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "# recall b is defined above\n",
     "b = np.arange(20).reshape(4,5)\n",
@@ -506,11 +769,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "A = \n",
+      "[[93 95 43]\n",
+      " [ 2 97 22]\n",
+      " [15 67 82]] \n",
+      "\n",
+      "b = \n",
+      "[[45]\n",
+      " [86]\n",
+      " [35]] \n",
+      "\n",
+      "A = \n",
+      "[[93 45 43]\n",
+      " [ 2 86 22]\n",
+      " [15 35 82]] \n",
+      "\n",
+      "A = \n",
+      "[[93 45 43]\n",
+      " [ 2 86 22]\n",
+      " [45 86 35]] \n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "A = np.random.randint(0,high=100,size=(3,3))\n",
     "b = np.random.randint(0,high=100,size=(3,1))\n",
@@ -543,11 +831,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[False False  True  True False]\n",
+      " [False  True  True False False]\n",
+      " [ True  True False False False]\n",
+      " [False False False False  True]\n",
+      " [False False False  True  True]] \n",
+      "\n",
+      "[[ True  True False False  True]\n",
+      " [ True False False  True  True]\n",
+      " [False False  True  True  True]\n",
+      " [ True  True  True  True False]\n",
+      " [ True  True  True False False]]\n"
+     ]
+    }
+   ],
    "source": [
     "I = np.array([[17, 24, 1, 8, 15],\n",
     "              [23, 5, 7, 14, 16],\n",
@@ -571,12 +875,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {
-    "collapsed": true,
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1 8 5 7 4 6 3 2 9] \n",
+      "\n",
+      "[17 24 15 23 14 16 13 20 22 10 12 19 21 11 18 25] \n",
+      "\n",
+      "[[0 0 1 8 0]\n",
+      " [0 5 7 0 0]\n",
+      " [4 6 0 0 0]\n",
+      " [0 0 0 0 3]\n",
+      " [0 0 0 2 9]] \n",
+      "\n",
+      "[[-1 -1  1  8 -1]\n",
+      " [-1  5  7 -1 -1]\n",
+      " [ 4  6 -1 -1 -1]\n",
+      " [-1 -1 -1 -1  3]\n",
+      " [-1 -1 -1  2  9]] \n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "print I[L],'\\n' # lists all element values of a that are less than 10.\n",
     "\n",
