general instructions revised

--- a/DIP_PA2/DIP_PA2.ipynb
+++ b/DIP_PA2/DIP_PA2.ipynb
@@ -22,7 +22,18 @@
    "source": [
     "# Digital Image Processing - Programming Assignment \\#2\n",
     "\n",
-    "## Personal details:\n",
+    "The following progamming assignment involves frequency domain image filtering tasks. The deadline for returning your work is **25 September 2017 at 23:59. Please, follow carefully the submission instructions given in the end of this notebook.** You are encouraged to seek information in other places than the course book and lecture material but remember list all your sources under references.\n",
+    "\n",
+    "If you experience problems that you cannot solve using the course material, including the provided pre-tutorials, or related Python documentation, or have any questions regarding to the programming assignments in general, please **do not hesitate to contact the course assistant** by e-mail at address `jukka.komulainen@oulu.fi` or by visiting the office TS311. You can also join IRC channel `#dkk@IRCnet` which is probably the fastest way to get help."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**At first, fill in your personal details below.**\n",
+    "\n",
+    "# Personal details:\n",
     "\n",
     "* **Name(s) and student ID(s):** `PUT YOUR NAME(S) AND STUDENT ID(S) HERE.`\n",
     "* **Contact information:** `PUT YOUR EMAIL ADDRESS(ES) HERE.`"
