Python 2/3 integer vs non-truncating division issue fixed

--- a/pre-tutorials/DIPtutorial-arrays-and-numpy.ipynb
+++ b/pre-tutorials/DIPtutorial-arrays-and-numpy.ipynb
@@ -35,14 +35,7 @@
    "source": [
     "## 1. What are arrays?\n",
     "\n",
-    "An array is a multi dimensional grid of data. Tables in Microsoft Excel can be thought of as arrays with dimensions `r × c × p` corresponding to `r` rows `c` columns and `p` pages. In NumPy, it is similar but you can have multi-dimensional arrays, with more than three dimensions. The figures below illustrates arrays of different dimensions."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "<img src=\"figA.jpeg\",width=600>"
+    "An array is a multi dimensional grid of data. Tables in Microsoft Excel can be thought of as arrays with dimensions `r × c × p` corresponding to `r` rows `c` columns and `p` pages. In NumPy, it is similar but you can have multi-dimensional arrays, with more than three dimensions. The figures below illustrates arrays of different dimensions: <img src=\"figA.jpeg\">"
    ]
   },
   {
@@ -562,19 +555,19 @@
      "output_type": "stream",
      "text": [
       "orignal 3x1 array c: \n",
-      " [[12]\n",
-      " [68]\n",
-      " [82]] \n",
+      " [[88]\n",
+      " [16]\n",
+      " [13]] \n",
       "\n",
       "c concatenated horizontally 3 times --> 3x3 array C: \n",
-      " [[12 12 12]\n",
-      " [68 68 68]\n",
-      " [82 82 82]] \n",
+      " [[88 88 88]\n",
+      " [16 16 16]\n",
+      " [13 13 13]] \n",
       "\n",
       "the transpose of c concatenated vertically 3 times --> 3x3 array C: \n",
-      " [[12 68 82]\n",
-      " [12 68 82]\n",
-      " [12 68 82]] \n",
+      " [[88 16 13]\n",
+      " [88 16 13]\n",
+      " [88 16 13]] \n",
       "\n"
      ]
     }
@@ -609,23 +602,23 @@
      "output_type": "stream",
      "text": [
       "original 2D array D: \n",
-      " [[84 89 60 51  8]\n",
-      " [64 22 48 70 20]\n",
-      " [88 59 16 50 64]\n",
-      " [35 92 45  6 52]\n",
-      " [ 7 13 20 38 23]] \n",
+      " [[31 99 52 21 16]\n",
+      " [71 82 43 52 76]\n",
+      " [90 89 33 98 51]\n",
+      " [77 72 44 54 17]\n",
+      " [60 20 78 83 48]] \n",
       "\n",
       "first row deleted from D: \n",
-      " [[64 22 48 70 20]\n",
-      " [88 59 16 50 64]\n",
-      " [35 92 45  6 52]\n",
-      " [ 7 13 20 38 23]] \n",
+      " [[71 82 43 52 76]\n",
+      " [90 89 33 98 51]\n",
+      " [77 72 44 54 17]\n",
+      " [60 20 78 83 48]] \n",
       "\n",
       "last column deleted from D: \n",
-      " [[64 22 48 70]\n",
-      " [88 59 16 50]\n",
-      " [35 92 45  6]\n",
-      " [ 7 13 20 38]] \n",
+      " [[71 82 43 52]\n",
+      " [90 89 33 98]\n",
+      " [77 72 44 54]\n",
+      " [60 20 78 83]] \n",
       "\n"
      ]
     }
@@ -692,10 +685,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "maximum value in array D = 92\n",
-      "minimum value in array D = 6\n",
-      "mean value in array D = 42.0625\n",
-      "standard deviation in array D = 26.538812968\n"
+      "maximum value in array D = 98\n",
+      "minimum value in array D = 20\n",
+      "mean value in array D = 65.375\n",
+      "standard deviation in array D = 21.776922992\n"
      ]
     }
    ],
@@ -723,17 +716,17 @@
      "output_type": "stream",
      "text": [
       "D = \n",
-      " [[64 22 48 70]\n",
-      " [88 59 16 50]\n",
-      " [35 92 45  6]\n",
-      " [ 7 13 20 38]] \n",
+      " [[71 82 43 52]\n",
+      " [90 89 33 98]\n",
+      " [77 72 44 54]\n",
+      " [60 20 78 83]] \n",
       "\n",
       "D flattened = \n",
-      " [64 22 48 70 88 59 16 50 35 92 45  6  7 13 20 38] \n",
+      " [71 82 43 52 90 89 33 98 77 72 44 54 60 20 78 83] \n",
       "\n",
-      "maximum value in array D = 92\n",
-      "maximum value in each column of D = [88 92 48 70]\n",
-      "maximum value in each row of D = [70 88 92 38]\n"
+      "maximum value in array D = 98\n",
+      "maximum value in each column of D = [90 89 78 98]\n",
+      "maximum value in each row of D = [82 98 77 83]\n"
      ]
     }
    ],
@@ -873,24 +866,24 @@
      "output_type": "stream",
      "text": [
       "A = \n",
-      " [[ 5  3 61]\n",
-      " [ 6 57 75]\n",
-      " [86  1 15]] \n",
+      " [[72  6 99]\n",
+      " [79 60 55]\n",
+      " [89 25 63]] \n",
       "\n",
       "b = \n",
-      " [[88]\n",
-      " [47]\n",
-      " [99]] \n",
+      " [[ 7]\n",
+      " [98]\n",
+      " [67]] \n",
       "\n",
       "Second column of A replaced with b = \n",
-      " [[ 5 88 61]\n",
-      " [ 6 47 75]\n",
-      " [86 99 15]] \n",
+      " [[72  7 99]\n",
+      " [79 98 55]\n",
+      " [89 67 63]] \n",
       "\n",
       "Last row of A replaced with b = \n",
-      " [[ 5 88 61]\n",
-      " [ 6 47 75]\n",
-      " [88 47 99]] \n",
+      " [[72  7 99]\n",
+      " [79 98 55]\n",
+      " [ 7 98 67]] \n",
       "\n"
      ]
     }
